# agentic-fetch

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  ideas.md  pyproject.toml  start.sh  supervisord.conf
.github/workflows/: docker.yml
src/agentic_fetch/: browser.py  cache.py  config.py  fetch.py  main.py  markdown.py  models.py  search.py
src/agentic_fetch/cli/: fetch.py  search.py
src/agentic_fetch/plugins/: __init__.py  base.py  github.py  gog_games.py  hackernews.py  medium.py  reddit.py  wikipedia.py
tests/: conftest.py  test_api.py  test_api_live.py  test_cache.py  test_config.py  test_duckduckgo_zendriver.py  test_fetch.py  test_github_plugin_bugs.py  test_hackernews_plugin.py  test_integration.py  test_markdown.py  test_markdown_improvements.py  test_medium_plugin.py  test_search.py  test_wikipedia_plugin.py
